add progile picture

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ title: ChiaYing Lin's Profile
         <h1>Hello! I am ChiaYing Lin</h1>
         <p>{{site.data.resume.basics.summary}}</p>
     </div>
-    <div id="profile-picture" class="col-sm-4 col-xs-12">
+    <!-- <div id="profile-picture" class="col-sm-4 col-xs-12">
         <img id="profile-picture" src="img/profile_picture.jpg">
-    </div>
+    </div> -->
 </div>
 <div id="education" class="row">
     <h1>Education</h1>
