revise error of rendering in about.me
publisher

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ title: ChiaYing Lin's Profile
         <li>
             <a href={{item.website}}><b>{{item.name}}</b></a>
             <ul>
-                <li> publisher: {{ite.publisher}}</li>
+                <li> publisher: {{item.publisher}}</li>
                 <li> release date: {{item.releaseDate}}</li>
             </ul>
         </li>
