update readme and revise punctuation

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: ChiaYing Lin's Profile
                 {% for topic in item.keywords %}
                     <b> {{topic}}, </b>
                 {% endfor %}
-            and <b>{{item.name}}</b>
+            and <b>{{item.name}}.</b>
             {%endfor%}
         </p>
 
